--- a/index.html
+++ b/index.html
@@ -60,14 +60,17 @@
             justify-content: space-between;
             align-items: center;
         }
+        .logo img {
+            width: 40px;
+        }
         .logo {
-            width: 20px;
-            height: 20px;
+            width: 40px;
+            height: 40px;
             transition: transform .2s;
         }
 
         .logo:hover {
-              transform: scale(0.5);
+              transform: scale(0.8);
         }
         nav {
                 background-color: #222;
