--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Discover FitnessGym - your ultimate fitness destination. Experience personalized workouts, top-notch equipment, and expert guidance. Join us for a journey to strength, health, and self-discovery. Your fitness transformation starts at FitnessGym!" />
     <meta name="author" content="Dawid Olko" />
-    <link rel="icon" href="/logo.png" type="image/png" />
+    <img src={`${process.env.PUBLIC_URL}/logo.png`} alt="Logo" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
